@@ -5,19 +5,25 @@ import com.hp.hpl.jena.rdf.model.ModelFactory;
 import com.hp.hpl.jena.rdf.model.Property;
 import com.hp.hpl.jena.rdf.model.Resource;
 import com.hp.hpl.jena.vocabulary.RDF;
+
 import info.openmultinet.ontology.vocabulary.Omn;
 import info.openmultinet.ontology.vocabulary.Omn_lifecycle;
+
 import org.apache.jena.riot.RiotException;
+import org.fiteagle.api.core.IGeni;
 import org.fiteagle.api.core.IMessageBus;
 import org.fiteagle.api.core.MessageUtil;
+import org.fiteagle.north.sfa.am.ISFA_AM;
 import org.fiteagle.north.sfa.am.common.AbstractMethodProcessor;
 import org.fiteagle.north.sfa.am.dm.SFA_AM_MDBSender;
+import org.fiteagle.north.sfa.util.GENI_Credential;
 import org.fiteagle.north.sfa.util.URN;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.util.HashMap;
 import java.util.List;
 
 /**
@@ -26,9 +32,6 @@ import java.util.List;
 public class PerformOperationalActionHandler extends AbstractMethodProcessor {
 
     private final List<URN> urns;
-
-
-
 
     public PerformOperationalActionHandler(List<URN> urns) {
         this.urns = urns;
@@ -42,18 +45,18 @@ public class PerformOperationalActionHandler extends AbstractMethodProcessor {
             throw new IllegalArgumentException("illegal arguments");
         }
         for(URN urn : urns){
-            Resource resource = model.createResource(URLDecoder.decode(urn.getSubject(), "UTF-8"));
+            Resource resource = model.createResource(URLDecoder.decode(urn.getSubject(), ISFA_AM.UTF_8));
             resource.addProperty(RDF.type, Omn.Resource);
             switch (action) {
-                case "geni_start":
+                case IGeni.GENI_STATRT:
                     System.out.println("start");
                     resource.addProperty(Omn_lifecycle.hasState,Omn_lifecycle.Ready);
                     break;
-                case "geni_restart":
+                case IGeni.GENI_RESTART:
                     System.out.println("restart");
                     resource.addProperty(Omn_lifecycle.hasState,Omn_lifecycle.Ready);
                     break;
-                case "geni_stop":
+                case IGeni.GENI_STOP:
                     System.out.println("stop");
                     resource.addProperty(Omn_lifecycle.hasState,Omn_lifecycle.Stopping);
                     break;
@@ -79,6 +82,17 @@ public class PerformOperationalActionHandler extends AbstractMethodProcessor {
         return performOpActionResponse;
     }
 
+    public void createResponse(final HashMap<String, Object> result, Model performResponse) {
+      HashMap<String, Object> value = new HashMap<>();
+      addSliverInformation(value, performResponse);
+      result.put(ISFA_AM.VALUE, value);
+      this.addCode(result);
+      this.addOutput(result);
+    }
 
+    public void handleCredentials(final Object param) {
+      List<GENI_Credential> credentialList = this.parseCredentialsParameters(param);
+      this.checkCredentials(credentialList);
+    }
 
 }
